tests/compile_fail/missing_mapping.out
In file included from tests/compile_fail/missing_mapping.cpp:14:
src/secureenumconverter.inc:32:6: error: #error "SEC_MAPPING not defined"
     #error "SEC_MAPPING not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
